components/ingress/traefik-cors-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-cors-headers
  namespace: glasgow-prod
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "POST"
      - "PUT"
      - "DELETE"
      - "PATCH"
      - "OPTIONS"
    accessControlAllowHeaders:
      - "Content-Type"
      - "Authorization"
      - "Accept"
      - "Origin"
      - "X-Requested-With"
    accessControlAllowOriginList:
      - "https://webapp.msv2.ovh"
      - "https://www.webapp.msv2.ovh"
      - "http://msv2-webapp.192.168.1.23.nip.io"
    accessControlAllowCredentials: true
    accessControlMaxAge: 100
    customRequestHeaders:
      X-Forwarded-Proto: "https"
